# viterbi

doc/: ClassDgrammViterbi.vsdx  nasaEncoder.xml  testEncoder.xml
source/: CMakeLists.txt  main.cpp
source/coder/h/: coder.hpp  coder_descr_iface.hpp  coder_types.hpp
source/coder/src/: coder.cpp
source/core/h/: core.hpp
source/logger/console_logger/h/: console_logger.hpp
source/parser/xml_parser/h/: xml_parser.hpp
source/parser/xml_parser/src/: xml_paser.cpp
